definindo os setings

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ readme = "README.md"
 python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 sqlalchemy = "^2.0.36"
+pydantic-settings = "^2.6.1"
 
 [tool.ruff]
 line-length = 79
