--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.12"
 fastapi = {extras = ["standard"], version = "^0.115.5"}
 sqlalchemy = "^2.0.36"
 pydantic-settings = "^2.6.1"
+alembic = "^1.14.0"
 
 [tool.ruff]
 line-length = 79
