--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,7 +33,8 @@ lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
 run = 'fastapi dev fast_zero\app.py'
 pre_test = 'task lint'
-test = 'pytest -s -x --cov=fast_zero -vv'
+testapp = 'pytest -s -x --cov=fast_zero -vv'
+test = 'pytest -s --cov=tests -vv'
 post_test = 'coverage html'
 
 [tool.poetry.group.dev.dependencies]
