--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,28 @@
 name = "fast-zero"
 version = "0.1.0"
 description = ""
-authors = ["Giovanni_DeskEmp <grdonati99@gmail.com>"]
+authors = ["dunossauro <mendesxeduardo@gmail.com>"]
 readme = "README.md"
+packages = [{include = "fast_zero"}]
 
 [tool.poetry.dependencies]
-python = "^3.12"
-fastapi = {extras = ["standard"], version = "^0.115.5"}
+python = "^3.11"
+fastapi = {extras = ["standard"], version = "^0.115.6"}
 sqlalchemy = "^2.0.36"
-pydantic-settings = "^2.6.1"
+pydantic-settings = "^2.7.0"
 alembic = "^1.14.0"
+pyjwt = "^2.10.1"
+pwdlib = {extras = ["argon2"], version = "^0.2.1"}
+tzdata = "^2024.2"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-cov = "^6.0.0"
+taskipy = "^1.14.1"
+ruff = "^0.8.4"
+httpx = "^0.28.1"
+factory-boy = "^3.3.1"
+freezegun = "^1.5.1"
 
 [tool.ruff]
 line-length = 79
@@ -29,18 +42,12 @@ pythonpath = "."
 addopts = '-p no:warnings'
 
 [tool.taskipy.tasks]
-lint = 'ruff check . && ruff check . --diff'
-format = 'ruff check . --fix && ruff format .'
-run = 'fastapi dev fast_zero\app.py'
+lint = 'ruff check .; ruff check . --diff'
+format = 'ruff check . --fix ruff format .'
+run = 'fastapi dev fast_zero/app.py'
 pre_test = 'task lint'
 test = 'pytest -s -x --cov=fast_zero -vv'
 post_test = 'coverage html'
-
-[tool.poetry.group.dev.dependencies]
-ruff = "^0.8.0"
-pytest = "^8.3.3"
-pytest-cov = "^6.0.0"
-taskipy = "^1.14.0"
 
 [build-system]
 requires = ["poetry-core"]
